Saves the specimen index  and other smal fixes